change text and image assets

--- a/app/views/welcome/discover.html.erb
+++ b/app/views/welcome/discover.html.erb
@@ -25,7 +25,7 @@
   Immer dieser Straße folgen. Nach ca.25 km kommt ihr durch Moriani.
 </p>
 <p lang="de-DE">
-  Danach kommt nach ca. 12 km ein sehr großer Supermarkt (Lelcerc) rechts:
+  Danach kommt nach ca. 12 km ein sehr großer Supermarkt (Leclerc) rechts:
 </p>
 <p lang="de-DE">
   Dann kommen 2 Tankstellen.
@@ -37,8 +37,8 @@
   <br/>
 </p>
 <p lang="de-DE">
-  Nach dieser 2. Tankstelle kommt eine Werkstatt (Garage) mit roten
-  Schildern.
+   Nach dieser 2. Tankstelle kommt eine Fiat-Werkstatt (Garage) mit 
+   blau-roten Schildern.
 </p>
 <p lang="de-DE">
   Dann fährt man in eine Senke.
@@ -48,11 +48,11 @@
   Eure!
 </p>
 <p lang="de-DE">
-  Da ist ein Hinweisschild: A Chiosura und Restaurant Chez Rose Marie.
+  Da ist ein Hinweisschild: Résidence „A Chiosura“ und Restaurant „La Plage“
 </p>
 <p lang="de-DE">
-  Bitte rechtzeitig blinken, langsam fahren und unbedingt auf überholende
-  Fahrzeuge achten!!
+  Bitte rechtzeitig blinken, langsam fahren und <u>unbedingt auf überholende
+  Fahrzeuge achten!!</u>
 </p>
 <p lang="de-DE">
   Dem Weg folgen und nach der Kuppe nach links fahren. Dann seht ihr die
@@ -87,7 +87,8 @@
 </p>
 <p lang="de-DE">
   <u>Bäcker</u>
-  : kommt morgens in die Siedlung! Uhrzeit erfragen, meist so 8.15 Uhr
+  : kommt morgens in die Siedlung! Uhrzeit erfragen, meist so ca. 8.00 Uhr
+    Wem das zu früh ist, muss selbst fahren zum „Salon de Thé“ s.o.
 </p>
 <p lang="de-DE">
   Wenn das zu früh ist, muss selbst fahren zum Salon de thé s.o.
@@ -129,23 +130,30 @@
   <u><strong>Einkaufen sonstiges:</strong></u>
 </p>
 <p lang="de-DE">
-  Boutique am Supermarkt
+  Boutiquen am Supermarkt
 </p>
 <p lang="de-DE">
-  oder dann in Bastia, oder Ajaccio
+  oder in Bastia, oder Ajaccio
 </p>
 <p lang="de-DE">
   <u><strong>Restaurants: </strong></u>
 </p>
 <p lang="de-DE">
-  fußläufig: am Strand nach rechts: Chez Rose Marie, reservieren ist oft
-  nötig!
+  250m fußläufig: am Strand nach rechts: “La Plage“, reservieren ist oft nötig! tel: 0033 4 95 557579
 </p>
 <p lang="de-DE">
-  fußläufig: am Strand nach links: La Siesta. Sehr leckere Pizza.
+  200m fußläufig: am Strand nach links: La Siesta. Sehr leckere Pizza. tel: 0033 4 95 20 00 90 39
 </p>
 <p lang="de-DE">
-  Wenn viele Einheimische da sind ist das ein gutes Zeichen.
+  „Le Bacchus“ : Einfahrt ungefähr gegenüber der Fiat-Werkstatt tel: 0033 4 95 55 64 95
+</p>
+<p lang="de-DE">
+  Wenn viele Einheimische da sind, ist das ein gutes Zeichen 
+</p>
+<p lang="de-DE">
+  Eine prima Pizza und hervorragende Charcuterie und das beste Eis der Welt gibt es in
+  St. Andrea di Cotone in der Nähe von Cervione. s. Flyer (Le Coton’s A Buttega) tel: 0033 6 30 98 42 03
+  Der Blick ist wunderschön!
 </p>
 <p lang="de-DE">
   Ansonsten lohnt es sich andere Gäste zu fragen, wo es in diesem Jahr gut
@@ -171,12 +179,6 @@
   meerseitig
 </p>
 <p lang="de-DE">
-  Sehr gut war es auch bei U Caradellu nach Süden an der Straße (meerseitig),
-</p>
-<p lang="de-DE">
-  sehr lecker! Reservieren nötig. Siehe Telfonbuch im Haus U corsu
-</p>
-<p lang="de-DE">
   Nett sitzt man auch in Moriani Plage an der Allee zum Strand rechts unter
   dichten Bäumen- wie das Restaurant heiß weiß ich leider nicht mehr. Riesen
   Eisbecher!!!
@@ -191,23 +193,6 @@
 </p>
 <p lang="de-DE">
   Korsische Rezepte zum Selbstkochen: Im Bücherregal!
-</p>
-<p lang="de-DE">
-  <u><strong>Internet:</strong></u>
-</p>
-<p lang="de-DE">
-  bei Rose Marie, Code kann man erfragen
-</p>
-<p lang="de-DE">
-  Ansonsten einen Wifi-Pas von Orange erwerben.
-</p>
-<p lang="de-DE">
-  Einfach auf Internet gehen dann sollte automatisch die Seite mit „Orange“
-  aufgehen- sogar auf Deutsch
-</p>
-<p lang="de-DE">
-  Falls noch einer gültig ist, stehen die Zugangsdaten auf einem Zettel im
-  ersten roten dtv-Lexikon
 </p>
 <p lang="de-DE">
   <br/>
@@ -256,7 +241,7 @@
   Bastia
 </p>
 <p lang="en-GB">
-  evtl. Cap Cosre
+  Cap Corse
 </p>
 <p lang="en-GB">
   Corte
@@ -273,10 +258,10 @@
 </p>
 <p lang="de-DE">
   <u>„</u>
-  <u><strong>Pflichtlektüre“ ist im Regal….. </strong></u>
+  <u><strong>„ Pflichtlektüre“ in zwei Sprachen ist im Regal….. </strong></u>
 </p>
 <p lang="de-DE">
-  Asterix auf Korsika =) =) =)
+  Asterix auf Korsika =) Astérix en Corse =)
 </p>
   </div>
 </div>
