--- a/app/views/welcome/info.html.erb
+++ b/app/views/welcome/info.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
       <h1 class="text-center">Allgemeine Informationen</h1>
-      <p class="text-center">Hier findest du weitere wichtigen Informationen über unser Haus.</p>
+      <p class="text-center">Hier sind weitere wichtige Informationen über unser Haus, den Strand und das Leben in „A Chiosura“</p>
     </div>
     <p lang="de-DE">
     Liebe Gäste !
@@ -12,7 +12,7 @@
     Wir möchten, dass alle sich in unserem B11 wohlfühlen!
     </p>
     <p lang="de-DE">
-    Folgende Informationen können dazu beitragen:
+    <u>Im Haus</u>
     </p>
     <ul>
     <li>
@@ -83,34 +83,15 @@
     </li>
     <li>
         <p lang="de-DE">
-            Nachts ist es ratsam die Türen abzuschließen.
+            Nachts sollte man die Türen abschließen.
             <br/>
             <br/>
-        </p>
-    </li>
-    <li>
-        <p lang="de-DE">
-            <em>
-                <strong>
-                    Achtung!!! die Platten der Terrasse sind, wenn sie nass
-                    sind, sehr sehr glatt !!!!
-                </strong>
-            </em>
         </p>
     </li>
     </ul>
-    <p lang="de-DE">
-    <em>
-        <strong>
-            Besonders nach dem Duschen vorsichtig sein!!!
-            <br/>
-        </strong>
-    </em>
-    <br/>
-    </p>
     <ul>
     <li>
-        <p lang="fr-FR">
+        <p lang="de-DE">
             Außendusche: Vorsicht bei gleichzeitigem Wasserverbrauch innen und
             außen!
             <br/>
@@ -120,15 +101,40 @@
             <br/>
         </p>
     </li>
+    </ul>
+    <ul>
     <li>
         <p lang="de-DE">
-            Unser großes blaues Sonnenzelt kann gerne genutzt werden. Bitte bei
-            starkem Wind tagsüber und über Nacht flach auf den Strand legen und
-            mit Sand beschweren.
+            Internet
+            <br/>
+            Ab dem Herbst 2020 gibt es einen WLAN-Anschluss.
+            Das Passwort steht in Band 1 des guten alten Fischer Lexikons
+            <br/>
+            <br/>
         </p>
     </li>
     </ul>
+    <p lang="de-DE">
+    <u>Am Strand</u>
+    </p>
     <ul>
+    <li>
+        <p lang="de-DE">
+            Es lohnt sich, einmal auszuprobieren, wie schön es ist ganz ohne zwickende Badekleidung
+            zu schwimmen und zu spielen! Wer das gar nicht möchte, findet ca. 150m nach Norden,
+            neben der „Siesta“ einen Textilstrand.
+            <br/>
+            <br/>
+        </p>
+    </li>
+    <li>
+        <p lang="de-DE">
+            Bitte nur Sonnenschirme in 3m Abstand zum Dünenzaun verwenden.
+            Seit 2020 ist es nicht mehr erlaubt Sonnenzelte aufzustellen.
+            <br/>
+            <br/>
+        </p>
+    </li>
     <li>
         <p lang="de-DE">
             Auch die Liegen können gerne benutzt werden..
@@ -136,6 +142,32 @@
             <br/>
         </p>
     </li>
+    </ul>
+    <p lang="de-DE">
+    <u>Das Leben in „A Chiosura“</u>
+    </p>
+    <p>Damit sich alle in der „Résidence“ wohlfühlen, sollte man bitte:</p>
+    <ul>
+    <li>
+        <p lang="de-DE">
+            nur bei An-und Abreise mit dem Auto direkt ans Haus fahren
+        </p>
+    </li>
+    <li>
+        <p lang="de-DE">
+            zwischen 12.00 und 14.00 Uhr möglichst leise sein
+        </p>
+    </li>
+    <li>
+        <p lang="de-DE">
+            den Abfall trennen: es gibt Hinweisschilder, wie genau…. Biomüll soll bitte in den Restmüll 
+        </p>
+    </li>
+    </ul>
+    <p lang="de-DE">
+    <u>Bei allen weiteren Fragen </u>
+    </p>
+    <ul>
     <li>
         <p lang="de-DE">
             Bei allen weiteren Fragen kann man sich immer an Willi Haake
@@ -177,7 +209,50 @@
     </p>
     <p lang="de-DE">
     <br/>
-    Wir wünschen allen wunderschöne Ferien!
+    <h1>Wir wünschen allen wunderschöne Ferien!</h1>
     </p>
+    <br/>
+    <h2>Hoffentlich braucht niemand diese Nummern……</h2>
+    <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Nummer</th>
+      <th scope="col">Je ne comprends pas?</th>
+      <th scope="col">Ist doch klar!</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">15</th>
+      <td>SAMU</td>
+      <td>Krankenwagen</td>
+    </tr>
+    <tr>
+      <th scope="row">17</th>
+      <td>Police</td>
+      <td>Polizei</td>
+    </tr>
+    <tr>
+      <th scope="row">18</th>
+      <td>Pompier</td>
+      <td>Feuerwehr</td>
+    </tr>
+    <tr>
+      <th scope="row">112</th>
+      <td>Appel Urgent</td>
+      <td>Notruf</td>
+    </tr>
+    <tr>
+      <th scope="row">4 95 59 10 51	</th>
+      <td>Hôpital Bastia</td>
+      <td>Krankenhaus in Bastia</td>
+    </tr>
+    <tr>
+      <th scope="row">4 91 75 25 25</th>
+      <td>Anti-Poison</td>
+      <td>Giftnotruf</td>
+    </tr>
+  </tbody>
+</table>
   </div>
 </div>
